Re-add some styling

--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>David Purdy – Contact</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 40px; }
-        h1 { color: #333; }
-        a { color: #0066cc; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-    </style>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
@@ -17,11 +12,10 @@
     <p>If we met at an event, or you just want to reach out, here’s where to find me:</p>
 
     <h2>📬 Direct Contact</h2>
-    <p>
-        📧 <strong>Email:</strong> <a href="mailto:wizzardx@gmail.com">wizzardx@gmail.com</a><br>
-        📱 <strong>Phone:</strong> <a href="tel:+27842785546">+27 84 278 5546</a><br>
-        💬 <strong>WhatsApp:</strong> Message me first
-    </p>
+    <div class="contact-links">
+        <a href="mailto:wizzardx@gmail.com">📧 Email Me</a>
+        <a href="tel:+27842785546">📱 Call or Text</a>
+    </div>
 
     <h2>🔗 My Online Presence</h2>
     <ul>
