refactor: migrate contact.md to index.html and enhance SEO metadata
- Move contact information from markdown to HTML
- Add SEO meta tags and schema.org markup
- Update page title and description
- Add structured data for organization contact info

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>David Purdy – Contact</title>
+    <title>David Purdy – AI Specialist, Ethical AI Advocate & Personal Development Mentor</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="description" content="David Purdy – AI specialist and advocate for ethical AI. Explore AI research, ethical technology, and personal growth insights.">
+    <meta name="keywords" content="AI, ethical AI, technology, David Purdy, AI research, machine learning, etc.">
+    <meta name="author" content="David Purdy">
 </head>
 <body>
 
@@ -33,4 +36,19 @@
     </footer>
 
 </body>
+
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Organization",
+  "name": "David Purdy",
+  "url": "https://davidpurdy.ar-ciel.org/",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+27 84 278 5546",
+    "contactType": "Customer Service"
+  }
+}
+</script>
+
 </html>
