Tidy Gravatar links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <main id="main-content">
         <div class="profile-container">
-            <img src="https://gravatar.com/great51407d26d7.jpg" alt="David Purdy" class="profile-image">
+            <img src="https://gravatar.com/great51407d26d7" alt="David Purdy" class="profile-image">
             <h1>Contact</h1>
             <p>
                 <a href="https://orcid.org/0009-0001-2999-2571" target="_blank" rel="noopener" class="orcid-link">
@@ -81,7 +81,7 @@
         "@type": "Person",
         "name": "David Purdy",
         "url": "https://davidpurdy.ar-ciel.org/",
-        "image": "https://gravatar.com/great51407d26d7.jpg",
+        "image": "https://gravatar.com/great51407d26d7",
         "description": "Exploring AI-driven intelligence recursion & physics. Interested in QED, AGI, and the future of intelligence.",
         "telephone": "+27 84 278 5546",
         "email": "wizzardx@gmail.com",
