Integrate M-core proof block and styling into site

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://davidpurdy.ar-ciel.org/">
+
+    <meta name="m-core" content="M is the act of noticing. Humans = M&Ms.">
 </head>
 <body>
     <!-- Skip to main content for accessibility -->
@@ -74,6 +76,15 @@
     <footer>
         <p>© 2025 David Purdy. All rights reserved.</p>
     </footer>
+
+    <section style="text-align: center; margin-top: 50px;">
+        <pre style="background: #f0f0f0; padding: 15px; border-radius: 8px; font-family: monospace; display: inline-block;">
+    type Human := M(M) + CandyShell(Identity)
+    theorem snackiverse : ∀ h : Human, h ∈ VendingMachine(M)
+        </pre>
+        <p style="margin-top: 10px; font-weight: bold; color: #555;">
+        🧠 Proven by M-Core · Compiled in Lean 4 · Recursive Snack Certified™</p>
+    </section>
 
     <script type="application/ld+json">
     {
