Add link to .frac proof

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 
         <hr>
         <p>If something I've worked on resonates with you, feel free to reach out. I'm particularly interested in AI-driven intelligence recursion, quantum electrodynamics (QED), artificial general intelligence (AGI), and the future of intelligence.</p>
+
+        <a href="snackiverse.frac" target="_blank">🧾 View the .frac proof</a>
     </main>
 
     <footer>
