Fix Gravatar Avatar URL

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <main id="main-content">
         <div class="profile-container">
-            <img src="https://gravatar.com/great51407d26d7" alt="David Purdy" class="profile-image">
+            <img src="https://gravatar.com/avatar/045483b90f748c2423d8321911ea9034f83f124c3e9ddb25e96011e6d68b20fb" alt="David Purdy" class="profile-image">
             <h1>Contact</h1>
             <p>
                 <a href="https://orcid.org/0009-0001-2999-2571" target="_blank" rel="noopener" class="orcid-link">
